Bug 30797: (follow-up) Hide default Flatpickr clear-field button
The basic MARC editor has its own button associated with each subfield
for emptying the contents of the input. Since the Flatpickr "X" icon
causes a layout problem and would be redundant, we can hide it on this page.

--- a/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/addbiblio.css
@@ -223,6 +223,10 @@ a.tagnum {
     width: 31em;
 }
 
+#cat_addbiblio .field_marceditor .flatpickr_wrapper {
+    display: none;
+}
+
 .mandatory_marker {
 	color: red;
 }
